fix overflowing copyright text

--- a/resources/css/olc.scss
+++ b/resources/css/olc.scss
@@ -1391,7 +1391,7 @@ body {
                             color: white;
                         }
                         small {
-                            font-size: 12px;
+                            font-size: 10px;
                         }
                         a.secondary {
                             text-decoration: underline;
